--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ crossterm = "0.23"
 reqwest = {version="0.11.11", features=["blocking"]}
 serde_json = "1.0"
 serde = {version="1.0", features=["derive"]}
+regex = "1"
+rand = "0.8"
+log = "0.4"
+log4rs = "1.1"
